//
//  accessibilityIdentifiers.swift
//  ImageFeed
//
//  Created by Marina Kireeva on 22.03.2025.
//

import Foundation

struct AccessibilityIdentifiers {
    static let logOutButton = "logOutButton"
    static let authWebView = "AuthWebView"
    static let authButton = "Authenticate"
    static let toolbar = "Toolbar"
    static let likeButton = "LikeButton"
    static let navBackButton = "navBackButton"
}
