...
        let processor = RoundCornerImageProcessor(cornerRadius: 60)
        imageView.kf.setImage(with: url, placeholder: UIImage(named: "UserPickStub"), options: [.processor(processor)])
    }
    
    @objc
    func didTapLogOutButton() {
        let alert = UIAlertController(title: "Пока, пока!", message: "Уверены что хотите выйти?", preferredStyle: .alert)
        let actionYes = UIAlertAction(title: "Да", style: .default) { [weak self] _ in
            self?.presenter?.logOut()
            self?.switchToSplashViewController()
        }
        
        let actionNo = UIAlertAction(title: "Нет", style: .cancel) { [weak self] _ in
            self?.dismiss(animated: true)
...
